--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_API_BASE_ENDPOINT = https://api.themoviedb.org/3
 REACT_APP_API_TOKEN = fbc4b49dfdafc24534ba98c2a389e847
 REACT_APP_API_IMAGE = https://www.themoviedb.org/t/p/w400/
+REACT_APP_API_IMAGE_SMALL = https://www.themoviedb.org/t/p/w200/
