--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
     "react-tooltip": "^5.10.0",
     "swiper": "^9.1.1",
     "web-vitals": "^2.1.4"
