--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "firebase": "^9.18.0",
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.2",
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
     "react-tooltip": "^5.10.0",
+    "redux-persist": "^6.0.0",
     "swiper": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
